scripts/nullaway/original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8.txt
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/helpers/Client.java:4: error: [NullAway] @NonNull static field output not initialized
	private static String output;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java:29: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return character;
		^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/abstractFactory/FactoryMaker.java:9: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/singleton/Singleton.java:7: error: [NullAway] initializer method does not guarantee @NonNull field data (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Singleton() {};
	        ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/singleton/Singleton.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static Singleton instance = null;
	                         ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:4: error: [NullAway] @NonNull field pie not initialized
	private Pie pie;
	            ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Pie.java:4: error: [NullAway] @NonNull field dough not initialized
	private String dough;
	               ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Pie.java:5: error: [NullAway] @NonNull field filling not initialized
	private String filling;
	               ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:4: error: [NullAway] @NonNull field pb not initialized
	private PieBuilder pb;
	                   ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:34: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/command/CommandClient.java:29: error: [NullAway] passing @Nullable parameter 'commands.get(direction)' where @NonNull is required
			center.executeAndSave(commands.get(direction));
			                                  ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Caretaker.java:4: error: [NullAway] @NonNull field memento not initialized
	private Memento memento;
	                ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Originator.java:4: error: [NullAway] @NonNull field state not initialized
	private String state;
	               ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:5: error: [NullAway] initializer method does not guarantee @NonNull field myState (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateContext() {
           ^
    (see http://t.uber.com/nullaway )
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/chainOfResponsibility/Logger.java:7: error: [NullAway] initializer method does not guarantee @NonNull field next (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Logger(int mask) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
15 errors
